# BazaarPlusPlus

./: LICENSE  README.md  README_en.md
bazaarplusplus-installer/: .gitignore  build.sh  package-lock.json  package.json  vite.config.ts
bazaarplusplus-installer/scripts/: build.test.mjs  generate-bindings.mjs  generate-bindings.test.mjs  prebuild-check.mjs  prebuild-check.test.mjs  version-sync.mjs  version-sync.test.mjs
bazaarplusplus-installer/src/: App.tsx  main.tsx
bazaarplusplus-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
bazaarplusplus-installer/src-tauri/capabilities/: default.json
bazaarplusplus-installer/src-tauri/resources/FfmpegSource/proton/: LICENSE.txt
bazaarplusplus-installer/src-tauri/resources/SourceForBuild/proton/BepInEx/core/: 0Harmony.xml  BepInEx.Harmony.xml  BepInEx.Preloader.xml  BepInEx.xml  MonoMod.RuntimeDetour.xml  MonoMod.Utils.xml
bazaarplusplus-installer/src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
bazaarplusplus-installer/src-tauri/src/commands/: install.rs  registry.rs
bazaarplusplus-installer/src-tauri/src/services/: game_path.rs  game_process.rs  history.rs  mod.rs  startup.rs  steam.rs
bazaarplusplus-installer/src-tauri/src/services/bepinex/: mod.rs  payload.rs  zip_archive.rs
bazaarplusplus-installer/src-tauri/src/services/detect/: game.rs  mod.rs  steam.rs
bazaarplusplus-installer/src-tauri/src/services/install/: mod.rs  types.rs
bazaarplusplus-installer/src-tauri/src/services/vdf/: launch_options.rs  mod.rs  parse.rs  tests.rs
bazaarplusplus-installer/src-tauri/src/stream/: overlay_settings.rs
bazaarplusplus-mod/: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Directory.Build.props  Directory.Packages.props  NuGet.Config  run.sh
(+757 files in other folders)
