[package]
name = "bppinstaller"
version = "4.2.0"
description = "BazaarPlusPlus Desktop App"
authors = ["cauyxy <cauyxy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bppinstaller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
keyvalues-parser = "0.2"
zip = { version = "8", default-features = false, features = ["deflate"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
include_dir = "0.7"
ts-rs = "12"
tempfile = "3"
rusqlite = "0.37"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
